Learning slowly how UI works

--- a/TrialsForAGod/Assets/2D Assets/HowDoesThisWork.uxml
+++ b/TrialsForAGod/Assets/2D Assets/HowDoesThisWork.uxml
@@ -1,5 +1,4 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <ui:Label text="Label" display-tooltip-when-elided="true" name="Gallery" />
-    <ui:ListView focusable="true" style="height: 388px;" />
-    <ui:Button display-tooltip-when-elided="true" name="AresAngry" style="height: 125px; width: 106px; opacity: 1; visibility: visible; overflow: hidden; display: flex; -unity-text-align: middle-center; align-items: auto; left: 188px; top: 21px; right: 497px; bottom: 302px; position: absolute; cursor: initial; background-image: url(&apos;project://database/Assets/2D%20Assets/Ares/Angry.png?fileID=2800000&amp;guid=143c7867161552046801857d7c120b32&amp;type=3#Angry&apos;); background-color: rgba(88, 88, 88, 0);" />
+    <ui:Button display-tooltip-when-elided="true" name="AresAngry" text="AresAngry" style="height: 125px; width: 106px; opacity: 1; visibility: visible; overflow: hidden; display: flex; -unity-text-align: middle-center; align-items: auto; left: 188px; top: 21px; right: 497px; bottom: 302px; position: absolute; cursor: initial; background-image: url(&apos;project://database/Assets/2D%20Assets/Ares/Angry.png?fileID=2800000&amp;guid=143c7867161552046801857d7c120b32&amp;type=3#Angry&apos;); background-color: rgba(88, 88, 88, 0);" />
 </ui:UXML>
