fixed ui problems

--- a/TrialsForAGod/Assets/2D Assets/NameInput.uxml
+++ b/TrialsForAGod/Assets/2D Assets/NameInput.uxml
@@ -76,6 +76,7 @@
         <ui:Button text="z" display-tooltip-when-elided="true" name="z" style="height: 42px; width: 39px; position: absolute; top: 500px; left: 420px; background-color: rgb(195, 28, 67); -unity-font-style: bold; font-size: 24px;" />
     </ui:VisualElement>
     <ui:Label text="Enter Name" display-tooltip-when-elided="true" name="enterName" style="position: absolute; height: 41px; width: 274px; top: 82px; left: 171px; font-size: 32px; -unity-text-align: upper-center; color: rgb(0, 0, 0); -unity-font-style: bold; -unity-font: url(&apos;project://database/Library/unity%20default%20resources?fileID=10102&amp;guid=0000000000000000e000000000000000&amp;type=0#Arial&apos;);" />
-    <ui:Button text="backspace" display-tooltip-when-elided="true" name="backspace" style="height: 42px; width: 135px; position: absolute; top: 500px; left: 196px; background-color: rgb(195, 28, 67); -unity-font-style: bold; font-size: 16px;" />
+    <ui:Button text="&lt;&lt;&lt;" display-tooltip-when-elided="true" name="backspace" style="height: 42px; width: 55px; position: absolute; top: 500px; left: 478px; background-color: rgb(195, 28, 67); -unity-font-style: bold; font-size: 16px;" />
+    <ui:Button text="space" display-tooltip-when-elided="true" name="space" style="height: 42px; width: 135px; position: absolute; top: 500px; left: 196px; background-color: rgb(195, 28, 67); -unity-font-style: bold; font-size: 16px;" />
     <ui:TextField value="name" readonly="false" is-delayed="false" multiline="false" name="typeSpace" password="false" style="position: absolute; top: 130px; left: 241px; right: auto; -unity-text-align: upper-center; -unity-text-outline-color: rgb(0, 0, 0); width: 106px;" />
 </ui:UXML>
