first death scene

--- a/TrialsForAGod/Assets/OptionsMenu.uxml
+++ b/TrialsForAGod/Assets/OptionsMenu.uxml
@@ -2,4 +2,6 @@
     <ui:Label text="Options" display-tooltip-when-elided="true" name="options" style="position: absolute; height: 191px; width: 882px; top: 64px; left: 572px; font-size: 120px; -unity-text-align: upper-center;" />
     <ui:Label text="Master Volume" display-tooltip-when-elided="true" name="masterVolume" style="position: absolute; height: 111px; width: 561px; top: 304px; left: 440px; font-size: 64px; -unity-text-align: upper-center;" />
     <ui:Slider picking-mode="Ignore" value="1" high-value="1" name="masterVolumeSlider" style="position: absolute; height: 28px; top: 332px; left: 1004px; width: 441px;" />
+    <ui:Label text="Music Volume" display-tooltip-when-elided="true" name="musicVolume" style="position: absolute; height: 111px; width: 561px; top: 423px; left: 440px; font-size: 64px; -unity-text-align: upper-center;" />
+    <ui:Slider picking-mode="Ignore" value="1" high-value="1" name="musicVolumeSlider" style="position: absolute; height: 28px; top: 455px; left: 1004px; width: 441px;" />
 </ui:UXML>
