main menu options button name change

--- a/TrialsForAGod/Assets/OptionsMenu.uxml
+++ b/TrialsForAGod/Assets/OptionsMenu.uxml
@@ -4,7 +4,8 @@
     <ui:Slider picking-mode="Ignore" value="1" high-value="1" name="masterVolumeSlider" style="position: absolute; height: 28px; top: 332px; left: 1004px; width: 441px;" />
     <ui:Label text="Music Volume" display-tooltip-when-elided="true" name="musicVolume" style="position: absolute; height: 111px; width: 561px; top: 423px; left: 440px; font-size: 64px; -unity-text-align: upper-center;" />
     <ui:Slider picking-mode="Ignore" value="1" high-value="1" name="musicVolumeSlider" style="position: absolute; height: 28px; top: 455px; left: 1004px; width: 441px;" />
-    <ui:Label text="SFX Volume" display-tooltip-when-elided="true" name="sFXVolume" style="position: absolute; height: 111px; width: 561px; top: 563px; left: 440px; font-size: 64px; -unity-text-align: upper-center;" />
-    <ui:Slider picking-mode="Ignore" value="1" high-value="1" name="sFXVolumeSlider" style="position: absolute; height: 28px; top: 597px; left: 1004px; width: 441px;" />
+    <ui:Label text="SFX Volume" display-tooltip-when-elided="true" name="sFXVolume" style="position: absolute; height: 111px; width: 561px; top: 542px; left: 440px; font-size: 64px; -unity-text-align: upper-center;" />
+    <ui:Slider picking-mode="Ignore" value="1" high-value="1" name="sFXVolumeSlider" style="position: absolute; height: 28px; top: 578px; left: 1004px; width: 441px;" />
     <ui:Button text="&lt;--return" display-tooltip-when-elided="true" name="return" class="highlight" style="position: absolute; height: 61px; width: 232px; top: 1000px; left: 26px; font-size: 24px; background-color: rgb(135, 44, 44); color: rgb(255, 255, 255);" />
+    <ui:Toggle label="Fullscreen" name="fullScreen" style="position: absolute; height: 135px; width: 526px; top: 662px; left: 546px; font-size: 64px;" />
 </ui:UXML>
