--- a/TrialsForAGod/Assets/Scripts/MainMenu/Selected.uss
+++ b/TrialsForAGod/Assets/Scripts/MainMenu/Selected.uss
@@ -45,7 +45,7 @@
     position: absolute;
     top: 816px;
     left: 1000px;
-    background-color: rgb(255, 174, 174);
+    background-color: rgba(255, 174, 174, 0);
     -unity-font-style: bold;
     font-size: 24px;
     transition-property: all;
