--- a/TrialsForAGod/Assets/2D Assets/hover.uss
+++ b/TrialsForAGod/Assets/2D Assets/hover.uss
@@ -14,6 +14,7 @@
     scale: 1.2 1.2;
     -unity-font-style: bold;
     transition-duration: 0.1s;
+    position: absolute;
 }
 
 .highlight:focus {
