--- a/TrialsForAGod/Assets/GalleryMenu.uxml
+++ b/TrialsForAGod/Assets/GalleryMenu.uxml
@@ -1,8 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/Scripts/MainMenu/Selected.uss?fileID=7433441132597879392&amp;guid=94cef367b8db65543972658add9bf92f&amp;type=3#Selected" />
-    <ui:VisualElement name="DisplayParent" style="width: 100%; height: 100%; align-items: center; position: absolute; flex-direction: row; justify-content: center; display: none;">
-        <ui:VisualElement name="DisplayW" style="position: absolute; width: 1000px; height: 600px; left: auto; top: auto; right: auto; bottom: auto; align-items: center; transform-origin: center; justify-content: space-around;" />
-        <ui:VisualElement name="DisplayT" style="position: absolute; width: 600px; height: 1000px; left: auto; top: auto; right: auto; bottom: auto; align-items: stretch; transform-origin: center;" />
+    <ui:VisualElement name="DisplayParent" style="width: 100%; height: 100%; align-items: center; position: absolute; flex-direction: row; justify-content: center; display: flex;">
+        <ui:VisualElement name="DisplayW" style="position: absolute; width: 1000px; height: 600px; left: auto; top: auto; right: auto; bottom: auto; align-items: center; transform-origin: center; justify-content: space-around; background-image: none;" />
+        <ui:VisualElement name="DisplayT" style="position: absolute; width: 600px; height: 1000px; left: auto; top: auto; right: auto; bottom: auto; align-items: stretch; transform-origin: center; background-image: none;" />
     </ui:VisualElement>
     <ui:VisualElement name="ButtonParent" style="position: absolute; flex-direction: row; flex-wrap: wrap; width: 1924px; max-height: 100%; max-width: 100%; align-items: flex-start; justify-content: center;">
         <ui:Button display-tooltip-when-elided="true" name="Display" style="width: 100%; height: 105%; background-color: rgba(88, 88, 88, 0.14); position: absolute; display: none;" />
